compile, copy and instruct grub to load "testelf" module

--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,4 +1,5 @@
 menuentry 'Hello World' {
-    multiboot /kernel
+    multiboot --quirk-modules-after-kernel /kernel kernel command line
+    module /testelf
     boot
 }
