load multiple initrd processes, each with different command line

--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,5 +1,8 @@
 menuentry 'Hello World' {
     multiboot --quirk-modules-after-kernel /kernel kernel command line
-    module /testelf
+    module /testelf Anna
+    module /testelf Ben
+    module /testelf Richard
+    module /testelf Sophie
     boot
 }
